[gd_scene load_steps=20 format=3 uid="uid://cfborojlxsgr7"]

[ext_resource type="MeshLibrary" uid="uid://dkmfn84yaexcd" path="res://assets/models/blocks.meshlib" id="1_r1ugn"]
[ext_resource type="Script" uid="uid://delmty8i1so6g" path="res://scripts/levels/level_03.gd" id="1_rx6uv"]
[ext_resource type="PackedScene" uid="uid://buf1kiwp2rx1w" path="res://ball/ball.tscn" id="2_o7h0x"]
[ext_resource type="Script" uid="uid://cliagejculu8e" path="res://scripts/death_zone.gd" id="3_5ixol"]
[ext_resource type="PackedScene" uid="uid://dovea1lxt8a46" path="res://ball/enemy.tscn" id="4_dq3jb"]
[ext_resource type="Script" uid="uid://cjpsqfbq0gshx" path="res://scripts/victory_zone.gd" id="4_rx6uv"]
[ext_resource type="PackedScene" uid="uid://rur8ocsxec2j" path="res://environment/pause_menu.tscn" id="5_dq3jb"]
[ext_resource type="Script" uid="uid://b330bqf1bi08o" path="res://scripts/enemy.gd" id="5_fr5b1"]
[ext_resource type="PackedScene" uid="uid://lsn8rnrrejyk" path="res://environment/game_over.tscn" id="6_fr5b1"]
[ext_resource type="AudioStream" uid="uid://bvhchhnqv46i0" path="res://assets/sound/start.ogg" id="8_kubyn"]
[ext_resource type="AudioStream" uid="uid://bgbmfm22f8gtw" path="res://assets/sound/backgroundMusicLevel03.mp3" id="8_rx6uv"]
[ext_resource type="AudioStream" uid="uid://dp1clvd7f2wlf" path="res://assets/sound/beep.mp3" id="9_rwdn4"]
[ext_resource type="Script" uid="uid://4orv2v5xpnns" path="res://scripts/final_level_victory_zone.gd" id="10_5ixol"]
[ext_resource type="PackedScene" uid="uid://c7x1io8m6wyut" path="res://environment/you_win.tscn" id="10_o7h0x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5cfje"]
size = Vector3(3.92907, 1.51903, 3.17986)

[sub_resource type="Environment" id="Environment_8yov6"]
background_mode = 1
background_color = Color(0.818222, 0.309021, 0.737606, 1)
ambient_light_source = 2
ambient_light_color = Color(0.694896, 0.444392, 0.682317, 1)
reflected_light_source = 2
tonemap_mode = 3
fog_enabled = true
fog_light_color = Color(0.720681, 0.678303, 0.414083, 1)
adjustment_enabled = true
adjustment_brightness = 0.75
adjustment_contrast = 1.5
adjustment_saturation = 1.2

[sub_resource type="BoxShape3D" id="BoxShape3D_ytdme"]
size = Vector3(150, 1, 150)

[sub_resource type="BoxShape3D" id="BoxShape3D_sv13p"]
margin = 0.0
size = Vector3(5.92262, 0.919833, 3.59385)

[sub_resource type="BoxShape3D" id="BoxShape3D_mmfcv"]
size = Vector3(2, 1, 2)

[node name="level_03" type="Node3D"]
script = ExtResource("1_rx6uv")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.017889, -9.53674e-07, -0.0550957)
mesh_library = ExtResource("1_r1ugn")
cell_size = Vector3(4, 4, 4)
cell_octant_size = 7
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(0, 0, 655360, 0, 1, 1441793, 65535, 0, 655361, 1, 0, 1, 1, 65535, 2, 1, 1, 1441794, 65535, 1, 655362, 65535, 65535, 1048578, 0, 65535, 1048576, 0, 65534, 0, 0, 65533, 0, 65535, 65532, 1048580, 65535, 65533, 1048580, 65535, 65534, 1048580, 1, 65529, 1441796, 1, 65528, 1441796, 65535, 65528, 1048580, 65535, 65530, 1048580, 65535, 65531, 1048580, 65535, 65529, 1048580, 65536, 65527, 393220, 131070, 65530, 1048580, 131070, 65529, 1048580, 131075, 65531, 1114116, 131075, 65530, 1114116, 131075, 65529, 1114116, 65538, 65529, 1441796, 196612, 65529, 1114116, 196612, 65528, 1114116, 196612, 65527, 1114116, 131075, 65527, 1114116, 131075, 65526, 1114116, 131075, 65525, 1441796, 131075, 65524, 1441796, 196612, 65525, 1441796, 196612, 65524, 1441796, 262149, 65524, 1441796, 131074, 65528, 1245188, 196612, 65526, 1114116, 262149, 65523, 1441796, 262149, 65522, 1441796, 262149, 65521, 1114116, 196612, 65521, 1114116, 131074, 65521, 1048576, 131073, 65521, 1048576, 131072, 65521, 1048576, 196607, 65521, 655361, 196607, 65520, 655361, 196607, 65522, 655362, 131072, 65522, 1441794, 131073, 65522, 1441793, 131074, 65522, 1441794, 131074, 65520, 2, 131073, 65520, 1441794, 131072, 65520, 655362, 131075, 65521, 131072, 131071, 65518, 524292, -1, 65519, 262148, 65535, 65520, 262148, 196607, 65517, 524292, -65538, 65518, 1048580, -196608, 65518, 1441796, -196610, 65518, 1048580, -262145, 65518, 1048580, -327680, 65518, 1048576, -327679, 65518, 1048576, -327678, 65518, 1441796, -262141, 65518, 1441796, -196604, 65518, 655360, -196604, 65517, 655360, -196604, 65519, 0, -262140, 65515, 655360, -262140, 65514, 327680, -196603, 65518, 1, -196603, 65517, 1, -196603, 65519, 0, 131071, 65521, 262148, -3, 65518, 1048580, -131071, 65518, 1441796, -196603, 65520, 1441793, -196604, 65520, 1441793, -196605, 65520, 655362, -196605, 65519, 1048578, -196602, 65520, 1441794, -196602, 65519, 2, -327676, 65513, 655364, -262141, 65515, 1048579, -262139, 65515, 1048579, -262140, 65513, 589824, -262141, 65513, 1048579, -262139, 65513, 3, -262141, 65514, 1441792, -262139, 65514, 1441792, -262141, 65512, 1441792, -262139, 65512, 655360, -262138, 65513, 393216, -262138, 65515, 655360, -262142, 65512, 655360, -262142, 65515, 655360, -262142, 65516, 655362, -262141, 65516, 1441793, -262140, 65516, 1441793, -262139, 65516, 1441793, -262138, 65516, 1441794, -262137, 65515, 1441794, -262138, 65514, 3, -262142, 65514, 0, -262142, 65513, 0, -262143, 65513, 1048579, -262143, 65515, 655362, -262143, 65514, 655361, -262144, 65513, 1048576, -262143, 65512, 1048576, -262144, 65512, 327680, -262143, 65511, 1048576, -262140, 65512, 655360, -262139, 65511, 655360, -262138, 65512, 0, -262138, 65511, 655360, -262140, 65511, 1048579, -262141, 65511, 1048576, -262142, 65511, 1048579, -262137, 65514, 655360, -262136, 65514, 1441794, -262136, 65513, 1, -262136, 65512, 1, -262136, 65511, 2, -262137, 65513, 393216, -262137, 65512, 1048579, -262137, 65511, 0, -262137, 65510, 2, -262138, 65510, 1048579, -262144, 65514, 1441794, -196609, 65514, 655362, -196609, 65513, 655361, -196609, 65512, 655361, -196609, 65511, 655361, -196609, 65510, 655361, -196609, 65509, 655361, -196609, 65508, 1048578, -262138, 65509, 2, -262139, 65509, 1048577, -262140, 65508, 2, -262140, 65509, 655363, -262141, 65508, 1048578, -262144, 65508, 2, -262143, 65509, 655363, -262142, 65509, 1048579, -262143, 65508, 1048579, -262141, 65510, 1048579, -262142, 65508, 0, -262140, 65510, 458752, -262144, 65509, 0, -262144, 65510, 327680, -262143, 65510, 0, -262142, 65510, 0, -262141, 65509, 0, -262143, 65507, 0, -262142, 65507, 262146, -262139, 65510, 458752, -262144, 65511, 589824, -196602, 65513, 327680, -196601, 65513, 327683, -196608, 65511, 196609, -196603, 65510, 1245188, -196604, 65510, 1507332, -196604, 65513, 589827, -196607, 65509, 458752, -196606, 65507, 458752, -196605, 65511, 458752, -196607, 65513, 458752, -262143, 65506, 3, -262143, 65505, 1048579, -262143, 65504, 3, -262143, 65503, 1048579, -262143, 65502, 3, -262143, 65501, 1048579, -262144, 65501, 1376260, -262144, 65502, 1376260, -262144, 65503, 1376260, -262144, 65504, 1376260, -262144, 65505, 1376260, -262144, 65506, 1376260, -262144, 65507, 1376260, -262142, 65506, 1441796, -262142, 65505, 1441796, -262142, 65504, 1441796, -262142, 65503, 1441796, -262142, 65502, 1441796, -262142, 65501, 1441796, -262143, 65500, 1441792, -262143, 65499, 1441792, -262143, 65497, 655360, -196609, 65497, 655360, -262143, 65495, 655360, -262141, 65497, 655360, -196609, 65495, 655360, -262141, 65495, 655360, -196609, 65493, 655360, -262143, 65493, 655360, -262141, 65493, 655360, -262144, 65496, 0, -262144, 65494, 0, -262142, 65494, 0, -262142, 65496, 0, -393214, 65492, 1310720, -393215, 65494, 1310720, -393215, 65496, 655360, -393213, 65495, 655360, -393216, 65497, 0, -393216, 65498, 655364, -327681, 65497, 1048580, -327681, 65495, 1048580, -589824, 65492, 131072, -524289, 65494, 131072, -524290, 65492, 524288, -589823, 65494, 131072, -589823, 65490, 131072, -524289, 65490, 131072, -589824, 65496, 131072, -524291, 65496, 131072, -524290, 65498, 131072, -524289, 65489, 524288, -524289, 65491, 524288, -524289, 65492, 524288, -589823, 65492, 524288, -524291, 65492, 524288, -589822, 65492, 524288, -524292, 65492, 524288, -589823, 65489, 524288, -589823, 65488, 1114115, -524289, 65488, 524288, -524292, 65490, 524288, -524292, 65489, 524288, -524293, 65489, 524288, -524293, 65490, 524288, -524293, 65492, 524288, -524295, 65492, 524288, -524294, 65492, 524288, -589823, 65487, 524288, -524289, 65487, 524288, -524292, 65486, 524288, -524291, 65487, 1114115, -524292, 65487, 524288, -524289, 65485, 1441792, -524289, 65484, 1441792, -524289, 65483, 1441792, -524291, 65482, 1441792, -524291, 65481, 1441792, -524290, 65481, 1441792, -524291, 65480, 1441792, -524289, 65481, 1441792, -524292, 65485, 65538, -524289, 65486, 1114115, -524290, 65483, 851969, -524289, 65482, 65537, -327681, 65492, 1310720, -393215, 65493, 131076, -393216, 65494, 1310724, -393213, 65497, 0, -393213, 65498, 655364, -393212, 65497, 1441796, -393216, 65495, 655360, -393215, 65495, 4, -393213, 65494, 4, -393214, 65495, 1048580, -327682, 65492, 1310724, -524292, 65484, 1507330, -524292, 65483, 1507330, -524292, 65482, 1507330, -524291, 65479, 65538, -524291, 65478, 65538, -524291, 65477, 327682, -524291, 65476, 327682, -524291, 65475, 327681, -524291, 65474, 65537, -524291, 65473, 65537, -524291, 65472, 851969, -524292, 65472, 851969, -524290, 65472, 851969, -524291, 65471, 1441792, -524291, 65469, 1441792, -524291, 65467, 1441792, -524291, 65465, 1441792, -524291, 65466, 1048576, -524291, 65468, 1048576, -524291, 65470, 1048576, -524291, 65464, 1048576, -524291, 65462, 1048576, -524291, 65463, 1048576, -524293, 65462, 1441792, -524289, 65462, 1441792, -524292, 65462, 1048576, -524290, 65462, 1048576, -720899, 65457, 655365, -720899, 65458, 1048577, -720899, 65459, 1441792, -720901, 65458, 1441792, -720900, 65458, 1441792, -720900, 65459, 1441792, -720901, 65459, 1441792, -720898, 65458, 1441792, -720898, 65459, 1441792, -720897, 65459, 1048576, -720897, 65457, 1048576, -720897, 65458, 1048576, -720898, 65457, 655361, -720900, 65457, 1, -720901, 65457, 0, -720897, 65456, 0, -720899, 65456, 1441793, -720898, 65456, 0, -720900, 65456, 0, -720901, 65456, 0, 65567, 65398, 458756, 65547, 65485, 458756, 65544, 65497, 458756, 65545, 65492, 458756, 65552, 65462, 458756, 65592, 65289, 458756, 65538, 65531, 1114116, 65538, 65530, 1114116, 196605, 65530, 1376260, 196605, 65531, 1376260, 131070, 65531, 1376260, 131073, 65519, 1441797, 131072, 65519, 1441797, -524293, 65460, 1179648, -524292, 65460, 1179648, -524291, 65460, 1179648, -524290, 65460, 1179648, -524289, 65460, 1179648, -524289, 65459, 1179648, -524293, 65459, 1179648, -524293, 65457, 1179648, -524293, 65458, 1179648, -524293, 65456, 1179648, -524292, 65456, 1179648, -524291, 65456, 1179648, -524290, 65456, 1179648, -524289, 65456, 1179648, -524289, 65458, 1179648, -524289, 65457, 1179648, -524292, 65457, 1048578, -524292, 65459, 655362, -524290, 65459, 1441794, -524290, 65457, 2, -524291, 65458, 655365, -524292, 65458, 655361, -524291, 65459, 1441793, -524291, 65457, 1048577, -524290, 65458, 1)
}
metadata/_editor_floor_ = Vector3(0, -9, 0)

[node name="Ball" parent="." instance=ExtResource("2_o7h0x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Enemy2" parent="." instance=ExtResource("4_dq3jb")]
transform = Transform3D(-0.627963, -0.778243, 0, 0.778243, -0.627963, 0, 0, 0, 1, 0.234575, 8.07968, -67.9085)
script = ExtResource("5_fr5b1")

[node name="Area3D2" type="Area3D" parent="Enemy2"]
transform = Transform3D(0.795474, 0.605989, 0, -0.605989, 0.795474, 0, 0, 0, 1, 0.796061, -0.116756, -0.515204)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy2/Area3D2"]
transform = Transform3D(-0.0226868, 0.999756, 0, -0.999756, -0.0226868, 0, 0, 0, 1, 0.400749, -0.0115311, 0.149536)
shape = SubResource("BoxShape3D_5cfje")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Enemy2"]
simplify_path = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.75, -0.433013, 0, 0.5, 0.866025, 0.866025, -0.433013, 0.25, 0, 5, 0)
light_color = Color(0.994714, 0.783687, 0.600066, 1)
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8yov6")

[node name="DeathZone" type="Area3D" parent="."]
script = ExtResource("3_5ixol")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathZone"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, -50, 0)
shape = SubResource("BoxShape3D_ytdme")

[node name="VictoryZone" type="Area3D" parent="."]
transform = Transform3D(0.994301, 0, -0.106611, 0, 1, 0, 0.106611, 0, 0.994301, -10.7982, -33.0401, -310.583)
script = ExtResource("4_rx6uv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VictoryZone"]
transform = Transform3D(0.999817, -0.0183498, -0.00398649, 0.0183346, 0.999825, -0.00381148, 0.00405613, 0.00373771, 0.99998, -0.893688, -1.21877, -0.611237)
shape = SubResource("BoxShape3D_sv13p")

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
metadata/_edit_use_anchors_ = true

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="PauseMenu" parent="." instance=ExtResource("5_dq3jb")]

[node name="GameOverMenu" parent="." instance=ExtResource("6_fr5b1")]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rx6uv")
volume_db = -10.0

[node name="TimeUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_kubyn")
volume_db = 5.0

[node name="BeepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_rwdn4")
volume_db = -5.0

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_kubyn")
volume_db = 5.0

[node name="CountDownLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
metadata/_edit_use_anchors_ = true

[node name="TestVictoryZone" type="Area3D" parent="."]
transform = Transform3D(0.994301, -4.65027e-10, -0.106611, -0.0116452, 0.994016, -0.108609, 0.105973, 0.109231, 0.988351, -12.3143, -37.2156, -314.925)
script = ExtResource("10_5ixol")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TestVictoryZone"]
transform = Transform3D(0.989304, -0.145675, 0.00745039, 0.145731, 0.984912, -0.09334, 0.00625916, 0.0934274, 0.995604, 3.39463, 10.7044, 5.23587)
shape = SubResource("BoxShape3D_mmfcv")

[node name="YouWin" parent="." instance=ExtResource("10_o7h0x")]

[node name="Round3" type="Label" parent="."]
offset_left = 20.0
offset_right = 219.0
offset_bottom = 69.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Round 3"

[connection signal="body_entered" from="DeathZone" to="DeathZone" method="_on_body_entered"]
[connection signal="body_entered" from="VictoryZone" to="VictoryZone" method="_on_body_entered"]
[connection signal="body_entered" from="TestVictoryZone" to="TestVictoryZone" method="_on_body_entered"]
